polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_modification_with_overlapping_narrowing_targets.snap
---
source: polychem/src/polymer_chemistry.rs
description: modifications
expression: out
---
  × failed to validate polymer chemistry file
  ╰─▶   × the target "Hydroxyl" overlaps with 2 other target specifiers
        help: double-check for typos, or remove the overlapping target
      specifier
      
   ╭─[test:2:5]
 1 │ Ac "O-Acetylation" {
 2 │     targeting "Hydroxyl"
   ·     ──────────┬──────────
   ·               ╰── this target
 3 │     targeting "Hydroxyl" at="Reducing End"
   ·     ───────────────────┬───────────────────
   ·                        ╰── overlaps with
 4 │     targeting "Hydroxyl" at="6-Position" of="N-Acetylmuramic Acid"
   ·     ───────────────────────────────┬───────────────────────────────
   ·                                    ╰── overlaps with
 5 │ }
   ╰────

