polychem/src/snapshots/polychem__polymer_chemistry__tests__parse_null_lost_modification.snap
---
source: polychem/src/polymer_chemistry.rs
description: modifications
expression: out
---
  × error parsing KDL

Error:   × expected string scalar, found null
   ╭─[test:3:10]
 2 │     targeting "Hydroxyl" at="6-Position"
 3 │     lost null
   ·          ──┬─
   ·            ╰── unexpected null
 4 │     gained "C2H3O"
   ╰────

